--- a/Areas/InstructorsArea/Views/Exam/Details.cshtml
+++ b/Areas/InstructorsArea/Views/Exam/Details.cshtml
@@ -125,7 +125,7 @@
 
                         <div class="row col-md-12">
                             <div class="r1">
-                                <h3 style="padding-left: 33px;">Exams Card</h3>
+                                <h3 style="padding-left: 33px;">Students Grades in @examName Exam</h3>
                             </div>
                         </div>
 
