--- a/Areas/InstructorsArea/Views/Exam/Index.cshtml
+++ b/Areas/InstructorsArea/Views/Exam/Index.cshtml
@@ -123,7 +123,7 @@
 
                     <div class="row col-md-12">
                         <div class="r1">
-                            <h3 style="padding-left: 33px;">Exams Card</h3>
+                            <h3 style="padding-left: 33px;">Exams Table</h3>
                         </div>
                     </div>
 
